<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RestaurantApp</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="addItem">Add an Item</string>
    <string name="category1">Fruit</string>
    <string name="item">item</string>
    <string name="action_settings">Settings</string>
    <string name="logout"> Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category2">Category Two</string>
    <string name="itemName">Item Name</string>
    <string name="itemQuantity">Quantity</string>
    <string name="itemNotes">Notes</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Category">Category</string>
    <string name="title_activity_add__item">Add_Item</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_item">Add_item</string>
    <string name="addIngredient">Add Ingredient</string>

    <!-- Navigation drawer items -->
    <string-array name="drawer_sections_array">
        <item>Schedule</item>
        <item>Inventory</item>
        <!-- <item>Tracking Menu</item> -->
        <item>Profile</item>
        <item>Log Out</item>
    </string-array>

    <!-- Navigation drawer items for Owner -->
    <string-array name="drawer_sections_array_for_owner">
        <item>Schedule</item>
        <item>Inventory</item>
        <!-- <item>Tracking Menu</item> -->
        <item>Profile</item>
        <item>Management</item>
        <item>Log Out</item>
    </string-array>

    <!-- activity_inventory_screen string id's are here -->
    <string name="item_label">Item Name:</string>
    <string name="item_name_hint">Type In Item Name</string>
    <string name="inv_item_page">Add Inventory Item</string>
    <string name="quantity_hint">Type in Quantity</string>
    <string name="unit_hint">Type in Units</string>
    <string name="dropdown_hint">Choose a Category</string>
    <string name="description_hint">Description</string>
    <string name="button_submit">Submit</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <!-- Names of the labels go here -->
    <string name="itemNameLabel">Item\'s Name:</string>
    <string name="quantityLabel">Quantity:</string>
    <string name="unitsLabel">Units:</string>
    <string name="categoryLabel">Category:</string>
    <string name="descriptionBoxLabel">Description:</string>
    <string name="submit">Submit</string>

    <!-- Names of the labels end here -->
    <!-- activity inventory scree string id's end here -->

    <string name="title_activity_shift_management_actity">ShiftManagementActity</string>
    <string name="title_activity_add_menu_item">AddMenuItemActivity</string>
    <string name="invFragIntroLabel">Please Add a New Option</string>
    <string name="newOptionBoxHint">Add New Option</string>
    <string name="Submit">Add Category</string>
    <string name="mealNameLabel">Meal\'s Name</string>
    <string name="meal_name_hint">Type in Meal Name</string>
    <string name="title_activity_edit_item">Edit_item</string>
    <string name="title_activity_shift_selector">Shift Selector</string>
    <string name="title_activity_view__profile">View_Profile</string>
    <string name="paintdis">Set Available Times</string>
    <string name="title_activity_edit__profile">Edit_Profile</string>
    <string name="title_activity_view__item">View Item</string>
    <string name="add_ingredients_dialog_box">Please Add a New ingredient</string>
    <string name="add">Add</string>
    <string name="title_activity_manager__view__profile">Manager_View_Profile</string>
    <string name="title_activity_profile__picture__select">Profile_Picture_Select</string>
    <string name="title_activity_profile__picture">Profile_Picture</string>
    <string name="title_activity_profile__gallery">Profile_Gallery</string>
    <string name="title_activity_shift_manager_dialog_fragment">ShiftManagerDialogFragment</string>
    
    <string name="startTime">Start Time: </string>
    <string name="endTime">End Time: </string>
    <string name="Confirm">Confirm</string>
    <string name="Delete">Delete</string>

</resources>
