<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/mealNameLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@+string/mealNameLabel" />
    
    <EditText android:id="@+id/meal_name_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@+string/meal_name_hint" 
        android:paddingTop="10dp"/>
    
    <TextView
        	android:id="@+id/mealCategoryLabelText"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/categoryLabel" />
    
    <Spinner android:id="@+id/meal_categories_dropdown"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:spinnerMode="dropdown"
    	android:paddingTop="5dp"/>
    
    <Button android:id="@+id/menuAddIngredient"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:text="@string/addIngredient" 
        android:layout_gravity="center_horizontal"
        style="?android:attr/borderlessButtonStyle"/>
    
    <TextView
        	android:id="@+id/mealDescriptionLabelText"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/descriptionBoxLabel" 
        	android:paddingTop = "10dp"/>
    
    <EditText android:id="@+id/mealDescription_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="4"
        android:hint="@string/description_hint" 
        android:paddingTop="5dp"/>
    
    	<LinearLayout
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal" 
    		android:paddingTop="20dp">
   	
			<Button android:id="@+id/menuItemSubmit"
        		android:layout_width="100dp"
        		android:layout_height="wrap_content"
        		android:text="@string/button_submit" 
        		android:layout_weight="1"
        		android:onClick="submit"
        		style="?android:attr/borderlessButtonStyle"/>
    
    		<Button android:id="@+id/menuItemCancel"
        		android:layout_width="100dp"
        		android:layout_height="wrap_content"
        		android:text="@string/button_cancel"
        		android:layout_weight="1" 
        		android:onClick="cancel"
        		style="?android:attr/borderlessButtonStyle"/>

		</LinearLayout>

</LinearLayout>

